<resources>
    <string name="app_name">Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="prepration_time">Prepration Time</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up_now">Don\'t have account? Sign-Up now.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here.</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="enter_the_email_associated_with_your_account_to_reset_your_password">Enter the email associated with your account to reset your password</string>
    <string name="reset">Reset</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="dessert">Dessert</string>
    <string name="drinks">Drinks</string>
    <string name="all_recipes">All Recipes</string>
    <string name="sign_up_to_discover_all_our_recipes">Sign up to discover all our Recipes</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="already_have_an_an_account">Already have an an account?</string>
    <string name="login_here">Login Here.</string>
    <string name="to_create_and_share_your_own_recipes_please_sign_up">To create and share your own recipes, please sign up!</string>
    <string name="min">Min.</string>
    <string name="profile">Profile</string>
    <string name="recipes">Recipes</string>
    <string name="add_recipe">Add New Recipe</string>
    <string name="search">Search</string>
    <string name="recipe_updated">Recipe updated successfully</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="recipe_added">Recipe added</string>
    <string name="fill_all_fields">Fill all fields to login</string>
    <string name="login_successful">Login success</string>
    <string name="login_failed">Login Failed</string>
    <string name="fill_all_register">Fill all fields to register</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Failed to Register</string>
    <string name="email_sent">Email has been sent to you</string>
    <string name="failed_to_send_email">Failed to send reset email</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_msg">Won\'t be able to recover this recipe!</string>
    <string name="yes_delete_it">Yes,delete it!</string>
    <string name="deleted">Deleted!</string>
    <string name="your_recipe_deleted">Your recipe has been deleted!</string>
    <string name="failed_to_delete">Failed to delete</string>
    <string name="oops">Oops...</string>
    <string name="signup_to_like_this">Sign up to like this recipe.</string>
    <string name="share">Share</string>
    <string name="my_recipes">My Recipes</string>
    <string name="likes">Likes</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
</resources>